# SCRIMP

./: .gitignore  alg_parameters.py  eval_custom_warehouse_env.py  eval_model.py  mapf_gym.py  pyproject.toml  util.py
final/: log-evaluation_custom_warehouse_SCRIMP.csv  log-evaluation_custom_warehouse_SCRIMP_23-12-13-11-46-36.csv  log-evaluation_custom_warehouse_SCRIMP_23-12-13-11-48-06.csv  log-evaluation_custom_warehouse_SCRIMP_23-12-16-17-24-05.csv  log-evaluation_custom_warehouse_SCRIMP_24-01-04-18-26-59.csv  log-evaluation_custom_warehouse_SCRIMP_24-01-06-19-40-47.csv  log-evaluation_custom_warehouse_SCRIMP_24-01-10-17-45-50.csv  log-evaluation_custom_warehouse_SCRIMP_24-01-15-18-33-41.csv
od_mstar3/: cython_od_mstar.cpp
results/: log-SCRIMP_15_15_simple_warehouse_25-05-31-16-03-26.csv  log-SCRIMP_15_15_simple_warehouse_25-05-31-16-04-59.csv  log-SCRIMP_15_15_simple_warehouse_25-05-31-16-09-08.csv  log-SCRIMP_15_15_simple_warehouse_25-05-31-16-10-06.csv  log-SCRIMP_15_15_simple_warehouse_25-06-01-01-57-06.csv  log-SCRIMP_15_15_simple_warehouse_25-06-01-09-36-53.csv  log-SCRIMP_50_55_long_shelves_25-06-01-09-37-09.csv  log-SCRIMP_50_55_simple_warehouse_25-05-31-16-10-06.csv  log-SCRIMP_50_55_simple_warehouse_25-06-01-01-57-06.csv
wandb/: latest-run
wandb/run-20231202_130635-xiuuv46a/: run-xiuuv46a.wandb
wandb/run-20231202_130950-f3yl3edd/: run-f3yl3edd.wandb
wandb/run-20231202_131216-hbm9pwe3/: run-hbm9pwe3.wandb
wandb/run-20231202_131350-hwk45nhz/: run-hwk45nhz.wandb
wandb/run-20231202_131610-kob22fw7/: run-kob22fw7.wandb
(+25 files in other folders)
