[project]
name = "scrimp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "cython==0.29.28",
    "gymnasium>=0.28.1",
    "imageio==2.9.0",
    "ipdb==0.13.9",
    "matplotlib==3.3.2",
    "networkx>=2.6.3",
    "numpy==1.21.6",
    "pyvirtualdisplay>=3.0",
    "ray==1.8.0",
    "setproctitle==1.2.2",
    "tensorflow==1.14.0",
    "torch==1.11.0",
    "wandb>=0.18.7",
]
